--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
                     <div class="swiper-wrapper ">
                         <div class="swiper-slide ">
                             <div class="slide-content ">
-                                <img src="images/graphics-ideal.png " class=" image-slide " alt="... ">
+                                <img src="images/Our-Company-creative-design-579-4.jpg " class=" image-slide " alt="... ">
                                 <div class="caption ">
                                     <h3 class="caption-title d-block ">Why us ?</h3>
                                     <b class="text text-dark d-block ">We have experience more than 10 years.</b>
@@ -268,7 +268,7 @@
                         <!-- Add Pagination -->
                         <div class="swiper-pagination "></div>
                       </div>
-                      <a href="# " class="btn btn-warning btn-projects ">View All Projects</a>
+                      <a href="# " class="btn btn-warning btn-projects "><i class="far fa-hand-point-up mr-2 text-white "></i>View All Projects</a>
                 </div>
             </div>
             
@@ -418,7 +418,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-    <script src="node_modules/swiper/js/swiper.min.js "></script>
+    <script src="js/swiper.min.js"></script>
     <script src=" https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity=" sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin=" anonymous "></script>
     <script src=" https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity=" sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin=" anonymous "></script>
     <script src=" https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity=" sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin=" anonymous "></script>
