change place bg

--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
             
 	</section>
     <section style="margin: 0px; position: relative; ">
-        <div class="top-img-container ">
+        <div class="top-img-container " style="background: url(/images/111.jpeg);background-size: cover; ">
             <div class="overlay ">
             </div>
             <div class="top-img-container-caption ">
