--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
             
 	</section>
     <section style="margin: 0px; position: relative; ">
-        <div class="top-img-container " style="background: url(images/111.jpeg);background-size: cover; ">
+        <div class="top-img-container " style="background-image: url(./images/111.jpeg);background-size: cover; ">
             <div class="overlay ">
             </div>
             <div class="top-img-container-caption ">
@@ -182,11 +182,11 @@
                     
                     <div class="swiper-cube col-lg-6 px-5 ">
                         <div class="swiper-wrapper ">
-                            <div class="swiper-slide " style="background-image:url(/images/myads1.jpg) "></div>
-                            <div class="swiper-slide " style="background-image:url(/images/myads2.jpg) "></div>
-                            <div class="swiper-slide " style="background-image:url(/images/myads3.jpg) "></div>
-                            <div class="swiper-slide " style="background-image:url(/images/myads4.jpg) "></div>
-                            <div class="swiper-slide " style="background-image:url(/images/myads5.jpg) "></div>
+                            <div class="swiper-slide " style="background-image:url(./images/myads1.jpg) "></div>
+                            <div class="swiper-slide " style="background-image:url(./images/myads2.jpg) "></div>
+                            <div class="swiper-slide " style="background-image:url(./images/myads3.jpg) "></div>
+                            <div class="swiper-slide " style="background-image:url(./images/myads4.jpg) "></div>
+                            <div class="swiper-slide " style="background-image:url(./images/myads5.jpg) "></div>
                         </div>
                         <!-- Add Pagination -->
                         <div class="swiper-pagination "></div>
