change place bg

--- a/home.html
+++ b/home.html
@@ -317,37 +317,37 @@
                     </div>
             </div>
 
-            <div class="shop-with-us my-3>
+            <div class="shop-with-us my-3">
                 <div class="container">
                     <div class="head-with-border">
                         <h2>Creative Designs</h2>
                     </div>
                     <div class="shop-box-container row">
-                        <div class="shop-box col-lg-3 p-3">
+                        <div class="shop-box col-lg-3 p-2">
                             <img class="shop-img" src="images/myads1.jpg" alt="" />
                         </div>
-                        <div class="shop-box col-lg-3 p-3">
+                        <div class="shop-box col-lg-3 p-2">
                             <img class="shop-img" src="images/myads2.jpg" alt="" />
                         </div>
-                        <div class="shop-box col-lg-3 p-3">
+                        <div class="shop-box col-lg-3 p-2">
                             <img class="shop-img" src="images/myads3.jpg" alt="" />
                         </div>
-                        <div class="shop-box col-lg-3 p-3">
+                        <div class="shop-box col-lg-3 p-2">
                             <img class="shop-img" src="images/myads1.jpg" alt="" />
                         </div>
-                        <div class="shop-box col-lg-3 p-3">
+                        <div class="shop-box col-lg-3 p-2">
                             <img class="shop-img" src="images/myads2.jpg" alt="" />
                         </div>
-                        <div class="shop-box col-lg-3 p-3">
+                        <div class="shop-box col-lg-3 p-2">
                             <img class="shop-img" src="images/myads3.jpg" alt="" />
                         </div>
-                        <div class="shop-box col-lg-3 p-3">
+                        <div class="shop-box col-lg-3 p-2">
                             <img class="shop-img" src="images/myads1.jpg" alt="" />
                         </div>
-                        <div class="shop-box col-lg-3 p-3">
+                        <div class="shop-box col-lg-3 p-2">
                             <img class="shop-img" src="images/myads2.jpg" alt="" />
                         </div>
-                        <div class="shop-box col-lg-3 p-3">
+                        <div class="shop-box col-lg-3 p-2">
                             <img class="shop-img" src="images/myads3.jpg" alt="" />
                         </div>
                     </div>
