change test scss

--- a/test.html
+++ b/test.html
@@ -21,8 +21,8 @@
 <body dir="ltr">
 
     <section>
-        <div class="my-header-inverse " id="my-header-inverse">
-            <div class="header-lg must-hidden">
+        <div class="my-header-inverse must-hidden" id="my-header-inverse">
+            <div class="header-lg ">
                 <div class="my-header-top" id="my-header-top">
                     <div class="info-navbar d-flex justify-content-between" id="info-navbar">
                         <ul class="info-list d-flex justify-content-start">
@@ -76,9 +76,9 @@
     </section>
 
     <section>
-        <div>
-            <div class="header-sm visible-xs fixed-top" id="header-sm">
-                <nav class="navbar navbar-expand-md navbar-dark bg-dark ">
+        <div class="">
+            <div class="header-sm visible-xs position-relative" id="header-sm">
+                <nav class="navbar navbar-expand-md navbar-light fixed-top">
                     <li class="nav-item">
                         <a href="#" class="logo navbar-brand"><img src=" images/logo.png "></a>
                     </li>
