--- a/test.html
+++ b/test.html
@@ -76,48 +76,46 @@
     </section>
 
     <section>
-        <div class="">
-            <div class="header-sm visible-xs position-relative" id="header-sm">
-                <nav class="navbar navbar-expand-md navbar-light fixed-top">
-                    <li class="nav-item">
-                        <a href="#" class="logo navbar-brand"><img src=" images/logo.png "></a>
-                    </li>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
-                        </button>
+        <div class="header-sm visible-xs position-relative" id="header-sm">
+            <nav class="navbar navbar-expand-md navbar-light fixed-top">
+                <li class="nav-item">
+                    <a href="#" class="logo navbar-brand"><img src=" images/logo.png "></a>
+                </li>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav">
-                            <li class="nav-item ">
-                                <form action="#">
-                                    <input class="btn " type="submit" id="home" value="Home" />
-                                </form>
-                            </li>
-                            <li class="nav-item">
-                                <form action="#">
-                                    <input class="btn " type="submit" id="contact" value="Contact us" />
-                                </form>
-                            </li>
-                            <li class="nav-item ">
-                                <form action="#">
-                                    <input class="btn " type="submit" id="about" value="About" />
-                                </form>
-                            </li>
-                            <li class="nav-item ">
-                                <form action="#">
-                                    <input class="btn " type="submit" id="login" value="Login" />
-                                </form>
-                            </li>
-                            <li class="nav-item">
-                                <form action="">
-                                    <input class="btn " type="submit" id="register" value="Register" />
-                                </form>
-                            </li>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <form action="#">
+                                <input class="btn " type="submit" id="home" value="Home" />
+                            </form>
+                        </li>
+                        <li class="nav-item">
+                            <form action="#">
+                                <input class="btn " type="submit" id="contact" value="Contact us" />
+                            </form>
+                        </li>
+                        <li class="nav-item ">
+                            <form action="#">
+                                <input class="btn " type="submit" id="about" value="About" />
+                            </form>
+                        </li>
+                        <li class="nav-item ">
+                            <form action="#">
+                                <input class="btn " type="submit" id="login" value="Login" />
+                            </form>
+                        </li>
+                        <li class="nav-item">
+                            <form action="">
+                                <input class="btn " type="submit" id="register" value="Register" />
+                            </form>
+                        </li>
 
-                        </ul>
-                    </div>
-                </nav>
-            </div>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </section>
 
@@ -159,8 +157,8 @@
                                 <div class="col-sm-6 ">
                                     <div class="caption ">
                                         <h3 class="caption-title d-block ">Why us ?</h3>
-                                        <b class="text text-dark d-block ">We have experience more than 10 years.</b>
-                                        <b class="text d-block ">our clients nearly 1000 clients</b>
+                                        <b class="text text-dark d-block ">Lorem ipsum dolor sit amet consectetur adipisicing elit. </b>
+                                        <b class="text d-block ">Iste quia reiciendis quod accusantium sapiente quibusdam sequi iure doloribus. </b>
                                         <a class="btn btn-primary " href="# ">Contact now</a>
                                         <a class="btn btn-danger " href="# ">Watch more</a>
                                     </div>
@@ -170,13 +168,13 @@
                         <div class="swiper-slide ">
                             <div class="slide-content row ">
                                 <div class="col-sm-6 ">
-                                    <img src="images/Our-Company-creative-design-579-4.jpg " class=" image-slide " alt="... ">
+                                    <img src="images/graphics-design-company-lucknow.png " class=" image-slide " alt="... ">
                                 </div>
                                 <div class="col-sm-6 ">
                                     <div class="caption ">
-                                        <h3 class="caption-title d-block ">Why us ?</h3>
-                                        <b class="text text-dark d-block ">We have experience more than 10 years.</b>
-                                        <b class="text d-block ">our clients nearly 1000 clients</b>
+                                        <h3 class="caption-title d-block ">Why u need contact us ?</h3>
+                                        <b class="text text-dark d-block ">Lorem ipsum dolor sit amet consectetur adipisicing elit. </b>
+                                        <b class="text d-block ">Iste quia reiciendis quod accusantium sapiente quibusdam sequi iure doloribus.</b>
                                         <a class="btn btn-primary " href="# ">Contact now</a>
                                         <a class="btn btn-danger " href="# ">Watch more</a>
                                     </div>
@@ -186,13 +184,13 @@
                         <div class="swiper-slide ">
                             <div class="slide-content row ">
                                 <div class="col-sm-6 ">
-                                    <img src="images/Our-Company-creative-design-579-4.jpg " class=" image-slide " alt="... ">
+                                    <img src="images/poster-flyer.jpg " class=" image-slide " alt="... ">
                                 </div>
                                 <div class="col-sm-6 ">
                                     <div class="caption ">
-                                        <h3 class="caption-title d-block ">Why us ?</h3>
-                                        <b class="text text-dark d-block ">We have experience more than 10 years.</b>
-                                        <b class="text d-block ">our clients nearly 1000 clients</b>
+                                        <h3 class="caption-title d-block ">What we can do for you ?</h3>
+                                        <b class="text text-dark d-block ">Lorem ipsum dolor sit amet consectetur adipisicing elit. </b>
+                                        <b class="text d-block ">Iste quia reiciendis quod accusantium sapiente quibusdam sequi iure doloribus.</b>
                                         <a class="btn btn-primary " href="# ">Contact now</a>
                                         <a class="btn btn-danger " href="# ">Watch more</a>
                                     </div>
@@ -202,29 +200,13 @@
                         <div class="swiper-slide ">
                             <div class="slide-content row ">
                                 <div class="col-sm-6 ">
-                                    <img src="images/Our-Company-creative-design-579-4.jpg " class=" image-slide " alt="... ">
+                                    <img src="images/Poster-Design.jpg" class=" image-slide " alt="... ">
                                 </div>
                                 <div class="col-sm-6 ">
                                     <div class="caption ">
-                                        <h3 class="caption-title d-block ">Why us ?</h3>
-                                        <b class="text text-dark d-block ">We have experience more than 10 years.</b>
-                                        <b class="text d-block ">our clients nearly 1000 clients</b>
-                                        <a class="btn btn-primary " href="# ">Contact now</a>
-                                        <a class="btn btn-danger " href="# ">Watch more</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide ">
-                            <div class="slide-content row ">
-                                <div class="col-sm-6 ">
-                                    <img src="images/Our-Company-creative-design-579-4.jpg " class=" image-slide " alt="... ">
-                                </div>
-                                <div class="col-sm-6 ">
-                                    <div class="caption ">
-                                        <h3 class="caption-title d-block ">Why us ?</h3>
-                                        <b class="text text-dark d-block ">We have experience more than 10 years.</b>
-                                        <b class="text d-block ">our clients nearly 1000 clients</b>
+                                        <h3 class="caption-title d-block ">What sets us apart ?</h3>
+                                        <b class="text text-dark d-block ">Lorem ipsum dolor sit amet consectetur adipisicing elit. </b>
+                                        <b class="text d-block ">Iste quia reiciendis quod accusantium sapiente quibusdam sequi iure doloribus.</b>
                                         <a class="btn btn-primary " href="# ">Contact now</a>
                                         <a class="btn btn-danger " href="# ">Watch more</a>
                                     </div>
