--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <audio src="audio/doset-dashtam.mp3" id="my_audio" loop='false' autoplay></audio>
+    <audio src="audio/doset-dashtam.mp3" id="my_audio" loop='false' autoplay='autoplay'></audio>
     <!-- my Styles -->
 
     <link rel="stylesheet" href="css/COMPILED-PAGES/home.css">
