--- a/home.html
+++ b/home.html
@@ -30,11 +30,11 @@
                                     class="email-text">saeed.moued@gmail.com</span></li>
                         </ul>
                         <ul class="social-btn-list justify-content-center d-flex">
-                            <a href="#"><i class="fab fa-facebook myfa"></i></a>
-                            <a href="#"><i class="fab fa-instagram myfa"></i></a>
-                            <a href="#"><i class="fab fa-twitter myfa"></i></a>
-                            <a href="#"><i class="fab fa-linkedin myfa"></i></a>
-                            <a href="#"><i class="fab fa-pinterest myfa"></i></a>
+                            <a href="https://www.facebook.com/SaeedMeta/"><i class="fab fa-facebook myfa"></i></a>
+                            <a href="https://www.instagram.com/saeedmoued/"><i class="fab fa-instagram myfa"></i></a>
+                            <a href="https://twitter.com/S_Mawed"><i class="fab fa-twitter myfa"></i></a>
+                            <a href="https://www.linkedin.com/in/saeed-mawed-452b5718a/"><i class="fab fa-linkedin myfa"></i></a>
+                            <a href="https://www.youtube.com/channel/UC37QvsqQka9NplmAeLh4U4g?view_as=subscriber"><i class="fab fa-youtube myfa"></i></a>
                         </ul>
                     </div>
 
