--- a/home.html
+++ b/home.html
@@ -279,7 +279,7 @@
                 </div>
             </div>
 
-            <div class="services py-3">
+            <div class="services py-3" style="background-image: url(./images/service-backgroung.jpg);">
                 <div class="container text-center">
                     <div class="head-with-border">
                         <h2>Our Services</h2>
