--- a/home.html
+++ b/home.html
@@ -159,7 +159,7 @@
                             <div class="swiper-slide">
                                 <div class="slide-content row">
                                     <div class="col-sm-6">
-                                        <img src="images/who-us/graphics-design-company-lucknow.png"class="image-slide"
+                                        <img src="images/who-us/graphics-design-company-lucknow.jpg"class="image-slide"
                                             alt="...">
                                     </div>
                                     <div class="col-sm-6">
@@ -177,7 +177,7 @@
                             <div class="swiper-slide">
                                 <div class="slide-content row">
                                     <div class="col-sm-6">
-                                        <img src="images/who-us/data-sience.png"class="image-slide"
+                                        <img src="images/who-us/data-sience.jpg"class="image-slide"
                                             alt="...">
                                     </div>
                                     <div class="col-sm-6">
@@ -197,7 +197,7 @@
                             <div class="swiper-slide">
                                 <div class="slide-content row">
                                     <div class="col-sm-6">
-                                        <img src="images/who-us/digital.png"class="image-slide" alt="...">
+                                        <img src="images/who-us/digital.jpg"class="image-slide" alt="...">
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="caption">
@@ -215,7 +215,7 @@
                             <div class="swiper-slide">
                                 <div class="slide-content row">
                                     <div class="col-sm-6">
-                                        <img src="images/who-us/web-design-agency.png" class="image-slide" alt="...">
+                                        <img src="images/who-us/web-design-agency.jpg" class="image-slide" alt="...">
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="caption">
@@ -262,7 +262,7 @@
                                 <div class="swiper-slide"style="background-image:url(./images/why-us/myads2.jpg)"></div>
                                 <div class="swiper-slide"style="background-image:url(./images/why-us/myads3.jpg)"></div>
                                 <div class="swiper-slide"style="background-image:url(./images/why-us/myads4.jpg)"></div>
-                                <div class="swiper-slide"style="background-image:url(./images/why-us/Support.png)"></div>
+                                <div class="swiper-slide"style="background-image:url(./images/why-us/Support.jpg)"></div>
                                 <div class="swiper-slide"style="background-image:url(./images/why-us/myads5.jpg)"></div>
                                 <div class="swiper-slide"style="background-image:url(./images/why-us/time-money-quality.jpg)"></div>
                             </div>
