--- a/home.html
+++ b/home.html
@@ -17,6 +17,8 @@
 </head>
 
 <body dir="ltr">
+
+    <!-- Header -->
     <section>
         <div class="my-header-inverse must-hidden"id="my-header-inverse">
             <div class="header-lg">
@@ -37,7 +39,6 @@
                             <a href="https://www.youtube.com/channel/UC37QvsqQka9NplmAeLh4U4g?view_as=subscriber"><i class="fab fa-youtube myfa"></i></a>
                         </ul>
                     </div>
-
                 </div>
                 <div class="my-header-bottom d-flex justify-content-between"id="my-header-bottom">
                     <div class="d-flex justify-content-start">
@@ -48,7 +49,6 @@
                             <li class="my-bottom-item"onclick="play()"><a class="btn" href="#">Home</a></li>
                             <li class="my-bottom-item""><a class="btn"  href="#">Contact</a></li>
                             <li class="my-bottom-item"><a  class="btn" href="#">About</a></li>
-
                         </ul>
                     </div>
                     <ul class="justify-content-end d-flex px-2 mx-3">
@@ -75,7 +75,7 @@
                 </ul>
             </div>
     </section>
-
+    <!-- Small Header -->
     <section>
         <div class="header-sm visible-xs position-relative"id="header-sm">
             <nav class="navbar navbar-expand-md navbar-light fixed-top">
@@ -87,43 +87,43 @@
                         aria-expanded="false"aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
+                <div class="collapse navbar-collapse"id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <form action="#">
+                                <input class="btn"type="submit"id="home"value="Home"/>
+                            </form>
+                        </li>
+                        <li class="nav-item">
+                            <form action="#">
+                                <input class="btn"type="submit"id="contact"
+                                    value="Contact us"/>
+                            </form>
+                        </li>
+                        <li class="nav-item">
+                            <form action="#">
+                                <input class="btn"type="submit"id="about"value="About"/>
+                            </form>
+                        </li>
+                        <li class="nav-item">
+                            <form action="#">
+                                <input class="btn"type="submit"id="login"value="Login"/>
+                            </form>
+                        </li>
+                        <li class="nav-item">
+                            <form action="">
+                                <input class="btn"type="submit"id="register"
+                                    value="Register"/>
+                            </form>
+                        </li>
 
-                    <div class="collapse navbar-collapse"id="navbarSupportedContent">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <form action="#">
-                                    <input class="btn"type="submit"id="home"value="Home"/>
-                                </form>
-                            </li>
-                            <li class="nav-item">
-                                <form action="#">
-                                    <input class="btn"type="submit"id="contact"
-                                        value="Contact us"/>
-                                </form>
-                            </li>
-                            <li class="nav-item">
-                                <form action="#">
-                                    <input class="btn"type="submit"id="about"value="About"/>
-                                </form>
-                            </li>
-                            <li class="nav-item">
-                                <form action="#">
-                                    <input class="btn"type="submit"id="login"value="Login"/>
-                                </form>
-                            </li>
-                            <li class="nav-item">
-                                <form action="">
-                                    <input class="btn"type="submit"id="register"
-                                        value="Register"/>
-                                </form>
-                            </li>
-
-                        </ul>
-                    </div>
-                    </nav>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </section>
 
+    <!-- Top image -->
     <section style="margin: 0px; position: relative;">
         <div class="top-img-container"
             style="background-image: url(./images/top-background.jpeg);background-size: cover;">
@@ -143,6 +143,8 @@
             </div>
         </div>
     </section>
+
+    <!--Main content-->
     <section>
         <div class="my-page">
 
@@ -232,7 +234,6 @@
                         <div class="swiper-pagination swiper-pagination-primary"></div>
                     </div>
                 </div>
-
             </div>
 
             <div class="why-us py-3 bg-white">
@@ -253,7 +254,6 @@
 
                             <h2 class="text-danger mt-3"><i class="fas fa-cogs mr-2 "></i>24 X 7 Tech Support</h2>
                             <b class="mb-3">You can always expect reliable and fast tech support from us. Always ready to respond your emails and other tech support.</b>
-
                         </div>
 
                         <div class="swiper-cube col-sm-6 col-xs-12 px-5">
@@ -596,7 +596,6 @@
     </section>
 
     <!-- Start Footer -->
-
     <section class="footer"id="footer"onclick="closeDashboard()">
         <div class="footer-top">
             <div class="container">
