--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
                             <a href="https://www.instagram.com/saeedmoued/"><i class="fab fa-instagram myfa"></i></a>
                             <a href="https://twitter.com/S_Mawed"><i class="fab fa-twitter myfa"></i></a>
                             <a href="https://www.linkedin.com/in/saeed-mawed-452b5718a/"><i class="fab fa-linkedin myfa"></i></a>
-                            <a href="https://www.youtube.com/channel/UC37QvsqQka9NplmAeLh4U4g?view_as=subscriber"><i class="fab fa-youtube myfa"></i></a>
+                            <a href="https://www.youtube.com/channel/UC37QvsqQka9NplmAeLh5U4g"><i class="fab fa-youtube myfa"></i></a>
                         </ul>
                     </div>
                 </div>
@@ -640,7 +640,7 @@
                             href="https://twitter.com/S_Mawed"><i class="fab fa-twitter"></i></a> <a
                             href="https://www.linkedin.com/in/saeed-mawed-452b5718a/"><i
                                 class="fab fa-linkedin"></i></a> <a
-                            href="https://www.youtube.com/channel/UC37QvsqQka9NplmAeLh4U4g?view_as=subscriber"><i
+                            href="https://www.youtube.com/channel/UC37QvsqQka9NplmAeLh5U4g"><i
                                 class="fab fa-youtube"></i></a>
 
                     </div>
@@ -674,8 +674,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="js/main.js"type="text/javascript"></script>
-    <script type="text/javascript" src="js/fontawesome.all.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/fontawesome.all.min.js"></script>
     <!-- Initialize Swiper -->
     <script src="js/swiper.min.js"></script>
     <script src="js/myswiper.js"></script>
