increase top-footer padding

--- a/home.html
+++ b/home.html
@@ -133,7 +133,7 @@
                 <div class="bab">
                     <h1>Welcome to our Team</h1>
                     <h3 class="text-muted mt-3 mb-5">WE"RE GLAD YOU"RE HERE!</h3>
-                    <h2 class="text-gray text-center>We build websites
+                    <h2 class="text-gray text-center ">We build websites
                         that will build your business</h2>
                     <b class="text-gray d-block"> We use Modern Technology</b>
                         <b class="text-gray d-block">   Experienced and know how to deal</b>
