--- a/home.html
+++ b/home.html
@@ -129,14 +129,14 @@
             style="background-image: url(./images/top-background.jpeg);background-size: cover;">
             <div class="overlay">
             </div>
-            <div class="top-img-container-caption">
+            <div class="top-img-container-caption ">
                 <div class="bab">
                     <h1>Welcome to our Team</h1>
                     <h3 class="text-muted mt-3 mb-5">WE"RE GLAD YOU"RE HERE!</h3>
-                    <h2 class="text-gray text-center ">We build websites
+                    <h2 class="text-gray text-center font-weight-bold font-italic">We build websites
                         that will build your business</h2>
-                    <b class="text-gray d-block"> We use Modern Technology</b>
-                        <b class="text-gray d-block">   Experienced and know how to deal</b>
+                    <b class="text-gray d-block font-weight-bold font-italic"> We use Modern Technology</b>
+                        <b class="text-gray d-block font-weight-bold font-italic">   Experienced and know how to deal</b>
                     <button class="btn btn-warning btn-lg contact-us d-block"><i class="fas fa-phone-volume"></i>
                         contact us</button>
                 </div>
