--- a/home.html
+++ b/home.html
@@ -284,7 +284,7 @@
                     <div class="head-with-border">
                         <h2>Our Services</h2>
                     </div>
-                    <h4 class="text-primary p-3">We are different. We deliver with outstanding professionalism, reliability, full return on investment accountability.</h4>
+                    <h4 class="text-primary p-3"></h4>
                     <div class="row">
                         <div class="col-lg-4 col-md-6 col-xs-6 p-2">
                             <div class="service-box">
