--- a/home.html
+++ b/home.html
@@ -22,8 +22,8 @@
     <section>
         <div class="my-header-inverse must-hidden"id="my-header-inverse">
             <div class="header-lg">
-                <div class="my-header-top"id="my-header-top">
-                    <div class="info-navbar d-flex justify-content-between"id="info-navbar">
+                <div class="my-header-top" id="my-header-top">
+                    <div class="info-navbar d-flex justify-content-between mx-2" id="info-navbar">
                         <ul class="info-list d-flex justify-content-end">
                             <li class="my-item info-item"><i class="fas fa-phone-square phone-icon"></i> <span
                                     class="phone-text">+964-751
@@ -88,7 +88,7 @@
                         <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse"id="navbarSupportedContent">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav mb-3">
                         <li class="nav-item">
                             <form action="#">
                                 <input class="btn"type="submit"id="home"value="Home"/>
