remove audio file

--- a/home.html
+++ b/home.html
@@ -11,8 +11,9 @@
 
     <link rel="stylesheet" href="css/COMPILED-PAGES/home.css">
 
+    <!--
     <audio src="audio/doset-dashtam.mp3" id="my_audio" loop="false" autoplay></audio>
-
+    -->
     <title>Design Theme - Home</title>
 </head>
 
@@ -46,7 +47,7 @@
                             <img src="images/logo.png" alt="my logo"  style="cursor: pointer;" onclick="window.location.href ='https://saeedmawed.github.io/portfolio-theme/home.html'">
                         </div>
                         <ul class="d-flex">
-                            <li class="my-bottom-item"onclick="play()"><a class="btn" href="home.html">Home</a></li>
+                            <li class="my-bottom-item"><a class="btn" href="home.html">Home</a></li>
                             <li class="my-bottom-item d-none"><a class="btn"  href="contact.html">Contact</a></li>
                             <li class="my-bottom-item"><a  class="btn" href="about.html">About</a></li>
                         </ul>
@@ -581,7 +582,7 @@
     </section>
 
     <!-- Start Footer -->
-    <section class="footer"id="footer"onclick="closeDashboard()">
+    <section class="footer" id="footer">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
