change our service background

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                         <ul class="d-flex">
                             <li class="my-bottom-item"><a class="btn" href="home.html">Home</a></li>
                             <li class="my-bottom-item d-none"><a class="btn"  href="contact.html">Contact</a></li>
-                            <li class="my-bottom-item"><a  class="btn" href="about.html">About</a></li>
+                            <li class="my-bottom-item active"><a  class="btn" href="about.html">About</a></li>
                         </ul>
                     </div>
                     <ul class="justify-content-end d-flex px-2 mx-3">
@@ -83,7 +83,7 @@
                             <a href="contact.html" class="btn">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="btn">About</a>
+                            <a href="about.html" class="btn active">About</a>
                         </li>
                         <li class="nav-item">
                             <form action="#">
