--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                             <img src="images/logo.png" alt="my logo"  style="cursor: pointer;" onclick="window.location.href ='https://saeedmawed.github.io/portfolio-theme/home.html'">
                         </div>
                         <ul class="d-flex">
-                            <li class="my-bottom-item"><a class="btn" href="home.html">Home</a></li>
+                            <li class="my-bottom-item active"><a class="btn" href="home.html">Home</a></li>
                             <li class="my-bottom-item d-none"><a class="btn"  href="contact.html">Contact</a></li>
                             <li class="my-bottom-item"><a  class="btn" href="about.html">About</a></li>
                         </ul>
@@ -90,7 +90,7 @@
                             <a href="contact.html" class="btn">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="btn">About</a>
+                            <a href="about.html" class="btn active">About</a>
                         </li>
                         <li class="nav-item">
                             <form action="#">
@@ -118,11 +118,11 @@
             <div class="top-img-container-caption ">
                 <div class="bab">
                     <h1>Welcome to our Team</h1>
-                    <h3 class="text-muted mt-3 mb-5">WE"RE GLAD YOU"RE HERE!</h3>
-                    <h2 class="text-gray text-center font-weight-bold font-italic">We build websites
+                    <h3 class="text-muted mt-3 mb-5 d-none">WE"RE GLAD YOU"RE HERE!</h3>
+                    <h2 class="text-gray text-center font-weight-bold font-italic d-none">We build websites
                         that will build your business</h2>
-                    <b class="text-gray d-block font-weight-bold font-italic"> We use Modern Technology</b>
-                        <b class="text-gray d-block font-weight-bold font-italic">   Experienced and know how to deal</b>
+                    <b class="text-gray d-block font-weight-bold font-italic d-none"> We use Modern Technology</b>
+                        <b class="text-gray d-block font-weight-bold font-italic d-none">   Experienced and know how to deal</b>
                     <button class="btn btn-warning btn-lg contact-us d-block"><i class="fas fa-phone-volume"></i>
                         contact us</button>
                 </div>
@@ -137,7 +137,7 @@
             <div class="who-us py-3">
                 <div class="container">
                     <div class="head-with-border">
-                        <h2>Who Us</h2>
+                        <h2>About us</h2>
                     </div>
                     <div class="who-us-body">
                         <b class="d-flex">We specialize in designing unique and eye-catching websites that suit our clients’ requirements. Our designs are popular for their Eye-catching graphics, smart color combinations, clear navigation and correct use necessary effects. We mean it, our designs are not conventional, and we always provide extraordinary styles and new look views.</b>
