style about page

--- a/home.html
+++ b/home.html
@@ -118,11 +118,11 @@
             <div class="top-img-container-caption ">
                 <div class="bab">
                     <h1>Welcome to our Team</h1>
-                    <h3 class="text-muted mt-3 mb-5 d-none">WE"RE GLAD YOU"RE HERE!</h3>
-                    <h2 class="text-gray text-center font-weight-bold font-italic d-none">We build websites
+                    <h3 class="text-muted mt-3 mb-5 ">WE"RE GLAD YOU"RE HERE!</h3>
+                    <h2 class="text-gray text-center font-weight-bold font-italic ">We build websites
                         that will build your business</h2>
-                    <b class="text-gray d-block font-weight-bold font-italic d-none"> We use Modern Technology</b>
-                        <b class="text-gray d-block font-weight-bold font-italic d-none">   Experienced and know how to deal</b>
+                    <b class="text-gray d-block font-weight-bold font-italic "> We use Modern Technology</b>
+                        <b class="text-gray d-block font-weight-bold font-italic ">   Experienced and know how to deal</b>
                     <button class="btn btn-warning btn-lg contact-us d-block"><i class="fas fa-phone-volume"></i>
                         contact us</button>
                 </div>
@@ -189,13 +189,13 @@
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="caption">
-                                            <h2 class="caption-title d-block text-warning">What can we do for you ?</h2>
+                                            <h2 class="caption-title d-block text-info">What can we do for you ?</h2>
                                             <b class="text text-dark d-block">We design your future.
                                                 </b>
                                             <b class="text d-block">We design your success.</b>
                                             <b class="text d-block">We provide a complete web design solutions
                                                 Top-quality, unique and eye catching designs.</b>
-                                            <a class="btn btn-warning"href="#">What We Offer ?</a>
+                                            <a class="btn btn-info"href="#">What We Offer ?</a>
                                         </div>
                                     </div>
                                 </div>
