--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
     <section>
         <div class="my-page">
             <div class="about-container py-3">
-                <div class="d-flex">
+                <div class="about-main">
                     <div class="left-about p-2">
                         <div class="left-img">
                             <div class="img">
