--- a/about.html
+++ b/about.html
@@ -17,6 +17,11 @@
 </head>
 
 <body dir="ltr">
+    <div class="loader-container">
+        <div class="loader">
+
+        </div>
+    </div>
 
     <!-- Header -->
     <section>
