--- a/home.html
+++ b/home.html
@@ -18,7 +18,11 @@
 </head>
 
 <body dir="ltr">
+    <div class="loader-container">
+        <div class="loader">
 
+        </div>
+    </div>
     <!-- Header -->
     <section>
         <div class="my-header-inverse must-hidden"id="my-header-inverse">
@@ -688,8 +692,6 @@
 
     </script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
-
-
     </script>
 
 </body>
