--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 </head>
 
 <body dir="ltr">
-    <div class="loader-container">
+    <div class="loader-container" id="loader-container">
         <div class="loader">
 
         </div>
@@ -655,8 +655,8 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
