--- a/home.html
+++ b/home.html
@@ -18,11 +18,12 @@
 </head>
 
 <body dir="ltr">
+
     <div class="loader-container" id="loader-container">
         <div class="loader">
-
         </div>
     </div>
+
     <!-- Header -->
     <section>
         <div class="my-header-inverse must-hidden"id="my-header-inverse">
@@ -57,10 +58,10 @@
                         </ul>
                     </div>
                     <ul class="justify-content-end d-flex px-2 mx-3">
-                        <li class="my-bottom-item mx-1"id="login-btn"><a class="btn" href="#"><i
+                        <li class="my-bottom-item mx-1"id="login-btn"><a class="btn" href="login-form.html"><i
                                     class="fas fa-sign-in-alt"></i>
                                 Login</a></li>
-                        <li class="my-bottom-item mx-1"id="register-btn"><a class="btn"  href="#"><i
+                        <li class="my-bottom-item mx-1"id="register-btn"><a class="btn"  href="login-form.html"><i
                                     class="fas fa-user"></i>
                                 Sign up</a></li>
                     </ul>
@@ -97,14 +98,11 @@
                             <a href="about.html" class="btn active">About</a>
                         </li>
                         <li class="nav-item">
-                            <form action="#">
-                                <input class="btn"type="submit"id="login"value="Login"/>
-                            </form>
+                            <a href="login-form.html" class="btn active">Login</a>
                         </li>
                         <li class="nav-item">
                             <form action="">
-                                <input class="btn"type="submit"id="register"
-                                    value="Register"/>
+                                <a href="login-form.html" class="btn active">Register</a>
                             </form>
                         </li>
                     </ul>
@@ -353,7 +351,7 @@
                 </div>
             </div>
 
-            <div class="our-clients py-3 bg-white">
+            <div class="our-clients py-3">
                 <div class="container text-center">
                     <div class="head-with-border">
                         <h2>Our Clients</h2>
@@ -532,40 +530,61 @@
                     <div class="head-with-border">
                         <h2>Our Amazing Works</h2>
                     </div>
-                    <h4 class="text-center text-danger p-3">We build the real value!</h4>
                     <div class="work-box-container row">
-                        <div class="work-box col-lg-3 col-md-4 col-xs-6 p-2">
-                            <img class="work-img" src="images/works/work-1.jpg" alt=""/>
+                        <div class="col-lg-3 col-md-4 col-xs-6 p-0">
+                            <div class="work-box">
+                                <img class="work-img" src="images/works/work-1.jpg" alt=""/>
+                            </div>
                         </div>
-                        <div class="work-box col-lg-3 col-md-4 col-xs-6 p-2">
-                            <img class="work-img" src="images/works/work-2.gif" alt=""/>
+                        <div class="col-lg-3 col-md-4 col-xs-6 p-0">
+                            <div class="work-box">
+                                <img class="work-img" src="images/works/work-2.gif" alt=""/>
+                            </div>
                         </div>
-                        <div class="work-box col-lg-3 col-md-4 col-xs-6 p-2">
-                            <img class="work-img" src="images/works/work-3.jpg" alt=""/>
+                        <div class="col-lg-3 col-md-4 col-xs-6 p-0">
+                            <div class="work-box">
+                                <img class="work-img" src="images/works/work-3.jpg" alt=""/>
+                            </div>
                         </div>
-                        <div class="work-box col-lg-3 col-md-4 col-xs-6 p-2">
-                            <img class="work-img" src="images/works/work-4.jpg" alt=""/>
+                        <div class="col-lg-3 col-md-4 col-xs-6 p-0">
+                            <div class="work-box">
+                                <img class="work-img" src="images/works/work-4.jpg" alt=""/>
+                            </div>
                         </div>
-                        <div class="work-box col-lg-3 col-md-4 col-xs-6 p-2">
-                            <img class="work-img" src="images/works/work-5.png" alt=""/>
+                        <div class="col-lg-3 col-md-4 col-xs-6 p-0">
+                            <div class="work-box">
+                                <img class="work-img" src="images/works/work-5.png" alt=""/>
+                            </div>
                         </div>
-                        <div class="work-box col-lg-3 col-md-4 col-xs-6 p-2">
-                            <img class="work-img" src="images/works/work-6.png" alt=""/>
+                        <div class="col-lg-3 col-md-4 col-xs-6 p-0">
+                            <div class="work-box">
+                                <img class="work-img" src="images/works/work-6.png" alt=""/>
+                            </div>
                         </div>
-                        <div class="work-box col-lg-3 col-md-4 col-xs-6 p-2">
-                            <img class="work-img" src="images/works/work-7.jpg" alt=""/>
+                        <div class="col-lg-3 col-md-4 col-xs-6 p-0">
+                            <div class="work-box">
+                                <img class="work-img" src="images/works/work-7.jpg" alt=""/>
+                            </div>
                         </div>
-                        <div class="work-box col-lg-3 col-md-4 col-xs-6 p-2">
-                            <img class="work-img" src="images/works/work-8.jpg" alt=""/>
+                        <div class="col-lg-3 col-md-4 col-xs-6 p-0">
+                            <div class="work-box">
+                                <img class="work-img" src="images/works/work-8.jpg" alt=""/>
+                            </div>
                         </div>
-                        <div class="work-box col-lg-3 col-md-4 col-xs-6 p-2">
-                            <img class="work-img" src="images/works/work-9.jpg" alt=""/>
+                        <div class="col-lg-3 col-md-4 col-xs-6 p-0">
+                            <div class="work-box">
+                                <img class="work-img" src="images/works/work-9.jpg" alt=""/>
+                            </div>
                         </div>
-                        <div class="work-box col-lg-3 col-md-4 col-xs-6 p-2">
-                            <img class="work-img" src="images/works/work-10.jpg" alt=""/>
+                        <div class="col-lg-3 col-md-4 col-xs-6 p-0">
+                            <div class="work-box">
+                                <img class="work-img" src="images/works/work-10.jpg" alt=""/>
+                            </div>
                         </div>
-                        <div class="work-box col-lg-3 col-md-4 col-xs-6 p-2">
-                            <img class="work-img" src="images/works/work-11.jpg" alt=""/>
+                        <div class="col-lg-3 col-md-4 col-xs-6 p-0">
+                            <div class="work-box">
+                                <img class="work-img" src="images/works/work-11.jpg" alt=""/>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -658,12 +677,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/fontawesome.all.min.js"></script>
     <!-- Initialize Swiper -->
