--- a/about.html
+++ b/about.html
@@ -57,10 +57,10 @@
                         </ul>
                     </div>
                     <ul class="justify-content-end d-flex px-2 mx-3">
-                        <li class="my-bottom-item mx-1" id="login-btn"><a class="btn" href="#"><i
+                        <li class="my-bottom-item mx-1" id="login-btn"><a class="btn" href="login-form.html"><i
                                     class="fas fa-sign-in-alt"></i>
                                 Login</a></li>
-                        <li class="my-bottom-item mx-1"id="register-btn"><a class="btn"  href="#"><i
+                        <li class="my-bottom-item mx-1"id="register-btn"><a class="btn"  href="login-form.html"><i
                                     class="fas fa-user"></i>
                                 Sign up</a></li>
                     </ul>
@@ -92,13 +92,12 @@
                         </li>
                         <li class="nav-item">
                             <form action="#">
-                                <input class="btn"type="submit"id="login"value="Login"/>
+                                <a href="login-form.html" class="btn active">Login</a>
                             </form>
                         </li>
                         <li class="nav-item">
                             <form action="">
-                                <input class="btn"type="submit"id="register"
-                                    value="Register"/>
+                                <a href="login-form.html" class="btn active">Register</a>
                             </form>
                         </li>
                     </ul>
