--- a/login-form.html
+++ b/login-form.html
@@ -19,7 +19,10 @@
   </head>
 
   <body dir="ltr">
-    <div class="login-container">
+    <div
+      class="login-container"
+      style="background-image: url('/images/service-backgroung.jpg');"
+    >
       <div
         class="go-back"
         action="action"
