--- a/login-form.html
+++ b/login-form.html
@@ -19,6 +19,10 @@
   </head>
 
   <body dir="ltr">
+    <div class="loader-container" id="loader-container">
+      <div class="loader"></div>
+    </div>
+
     <div
       class="login-container"
       style="background-image: url('/images/service-backgroung.jpg');"
