--- a/login-form.html
+++ b/login-form.html
@@ -25,7 +25,7 @@
 
     <div
       class="login-container"
-      style="background-image: url('/images/service-backgroung.jpg');"
+      style="background-image: url('./images/service-backgroung.jpg');"
     >
       <div
         class="go-back"
@@ -77,13 +77,13 @@
               <button type="submit">Log in</button>
             </div>
           </div>
-          <div class="d-flex justify-content-between m-3">
+          <div class="d-flex justify-content-between m-3 pt-3">
             <a
               href="#"
-              class="form-forgotten-password justify-content-start ml-5"
+              class="form-forgotten-password justify-content-start mx-4"
               >Forgotten password &middot;</a
             >
-            <a href="#" class="form-create-an-account justify-content-end mr-5"
+            <a href="#" class="form-create-an-account justify-content-end mx-4"
               >Create an account &rarr;</a
             >
           </div>
