--- a/login-form.html
+++ b/login-form.html
@@ -25,7 +25,7 @@
 
     <div
       class="login-container"
-      style="background-image: url('./images/service-backgroung.jpg');"
+      style="background-image: url('./images/login.jpg');"
     >
       <div
         class="go-back"
