add register page

--- a/login-form.html
+++ b/login-form.html
@@ -25,7 +25,7 @@
 
     <div
       class="login-container"
-      style="background-image: url('./images/login.jpg');"
+      style="background-image: url('./images/login-register.jpg');"
     >
       <div
         class="go-back"
@@ -83,7 +83,9 @@
               class="form-forgotten-password justify-content-start mx-4"
               >Forgotten password &middot;</a
             >
-            <a href="#" class="form-create-an-account justify-content-end mx-4"
+            <a
+              href="register.html"
+              class="form-create-an-account justify-content-end mx-4"
               >Create an account &rarr;</a
             >
           </div>
