--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
                         <li class="my-bottom-item mx-1"id="login-btn"><a class="btn" href="login-form.html"><i
                                     class="fas fa-sign-in-alt"></i>
                                 Login</a></li>
-                        <li class="my-bottom-item mx-1"id="register-btn"><a class="btn"  href="login-form.html"><i
+                        <li class="my-bottom-item mx-1"id="register-btn"><a class="btn"  href="register.html"><i
                                     class="fas fa-user"></i>
                                 Sign up</a></li>
                     </ul>
@@ -102,7 +102,7 @@
                         </li>
                         <li class="nav-item">
                             <form action="">
-                                <a href="login-form.html" class="btn active">Register</a>
+                                <a href="register.html" class="btn active">Register</a>
                             </form>
                         </li>
                     </ul>
